--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;600&display=swap" rel="stylesheet">
-    <link href="assets/styles.css" rel="stylesheet">
-    <script src="assets/script.js" defer></script>
-    <script src="assets/front.js" defer></script>
-</head>
-<body>
-    <div class="shopping-cart">
-        <h1>Kirana's Fruit Stand</h1>
-        <div class="currency-selector"></div>
-        <div class="cart-container">
-            <div class="products-container">
-                <h2>Products</h2>
-                <div class="products"></div>
-                <h2>Your Shopping Cart</h2>
-                <div class="empty-btn"></div>
-                <div class="cart"></div>
-            </div>
-            <div class="checkout-container">
-                <h2>Checkout</h2>
-                <div class="checkout">
-                    <div class="cart-total"></div>
-                    <form>
-                        <label>Enter Cash Received:</label>
-                        <input class="received" type="text">
-                        <button class="pay">Submit</button> 
-                    </form>
-                    <h3>Receipt</h3>
-                    <div class="pay-summary"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Shopping Cart</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;600&display=swap" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
+        <script type="module" src="front.js" defer></script>
+    </head>
+    <body>
+        <div class="shopping-cart">
+            <h1>Kirana's Fruit Stand</h1>
+            <div class="store-wrapper">
+
+                <div class="products">
+
+                    <h2>Products</h2>
+                    <div class="product-list"></div>
+
+                    <div>
+                        <h2>Your Shopping Cart</h2>
+                        <div class="cart-list"></div>
+                    </div>
                 </div>
+
+                <div class="checkout">
+                    <div class="checkout-items">
+                        <h3>Checkout</h3>
+                        <p>Cart Total: $45.00</p>
+                        <p>Enter cash received</p>
+                        <div class="cash-input">
+                            <input type="text" id="cash-received" placeholder="Enter cash received"/>
+                            <button class="cash-button">Submit</button>
+                        </div>
+                        <h3>Receipt</h3>
+                        <p>Cash Received: $25</p>
+                        <p>Remaining Balance: -$12</p>
+                        <p>Please pay additional amount</p>
+                        <hr/>
+                        <p>Cash Received: $25</p>
+                        <p>Cash Returned: $0</p>
+                        <p>Thank you!</p>
+                    </div>
+                </div>
+
             </div>
-        </div>
-    </div>
-</body>
-</html>
-
-
+        </body>
+    </html>
